<resources>
    <string name="app_name">FoodPlannerApp</string>
    <string name="register">Register</string>
    <string name="food_planner">Food Planner</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="explore_ingredients">Explore Ingredients</string>
    <string name="show_all">show all</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="explore_countries">Explore Countries</string>
    <string name="all_countries">All Countries</string>
    <string name="all_categories">All Categories</string>
    <string name="default_web_client_id">6066479135-o38acc5o26kpfu2plr566d7kej3a9aa8.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_favorites_yet">No Favorites Yet!</string>
    <string name="tap_the_heart_icon_on_a_meal_to_save_it_here">Tap the heart icon on a meal to save it here.</string>
    <string name="no_planned_meals_yet">No Planned Meals Yet!</string>
    <string name="tap_on_calendar_icon_on_a_meal_to_see_it_here">Tap on calendar icon on a meal to see it here</string>
</resources>