<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/cream_background"
    tools:context=".presentation.auth.login.views.LoginFragment">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- App Title -->
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Food Planner"
        android:textSize="32sp"
        android:textColor="@color/green_header"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in to your account"
        android:textSize="16sp"
        android:textColor="@color/mocha_brown"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <!-- Email Field -->
    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColor="@color/olive_grey"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/olive_green"
        android:background="@drawable/text_field_bg"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/label_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/login_email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/olive_green"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_bg"
            android:drawableStart="@drawable/ic_padlock"
            android:drawablePadding="16dp"
            android:drawableTint="@color/olive_green"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/olive_grey"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Log In Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/login_password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:padding="12dp" />

    <!-- Register Redirection Text -->
    <TextView
        android:id="@+id/redirect_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/mocha_brown"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/redirect_register_clickable"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/redirect_register_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textColor="@color/mocha_brown"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/redirect_register"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/guest_mode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:text="Continue as a Guest"
        android:textSize="16sp"
        android:textColor="@color/olive_green"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0.05"
        app:layout_constraintTop_toBottomOf="@id/redirect_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
