<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cream_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tv_home_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="2"
                android:textColor="@color/dark_charcoal"
                android:textSize="32sp"
                app:layout_constraintEnd_toStartOf="@id/iv_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Hello, Abdullh!" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_home_title"
                app:tint="@color/dark_charcoal"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_meal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/meal_of_the_day"
                android:textColor="@color/dark_charcoal"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_title" />

            <FrameLayout
                android:id="@+id/meal_day_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_meal_title"
                tools:visibility="visible">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/mealShimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:shimmer_auto_start="true">

                    <include layout="@layout/item_meal_day_placeholder" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_meal_of_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="6dp"
                    tools:visibility="visible">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/img_meal_day"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/sample_meal"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_meal_day_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/poppins_bold"
                            android:maxLines="1"
                            android:text="Spicy Arrabiata Pasta"
                            android:textColor="@color/dark_charcoal"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/img_meal_day" />

                        <TextView
                            android:id="@+id/tv_meal_day_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="Italian • 30 mins"
                            android:textColor="@color/olive_grey"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_meal_day_name" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </FrameLayout>


            <TextView
                android:id="@+id/tv_ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/explore_countries"
                android:textColor="@color/dark_charcoal"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meal_day_container" />

            <TextView
                android:id="@+id/tv_see_all_countries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/show_all"
                android:textColor="@color/olive_grey"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_ingredients_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <FrameLayout
                android:id="@+id/area_rv_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
                tools:visibility="visible">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/areaShimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:shimmer_auto_start="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_area_placeholder" />
                        <include layout="@layout/item_area_placeholder" />
                        <include layout="@layout/item_area_placeholder" />
                        <include layout="@layout/item_area_placeholder" />

                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_areas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_area"
                    tools:visibility="visible" />
            </FrameLayout>


            <TextView
                android:id="@+id/tv_categories_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/explore_categories"
                android:textColor="@color/dark_charcoal"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/area_rv_frame" />

            <TextView
                android:id="@+id/tv_see_all_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/show_all"
                android:textColor="@color/olive_grey"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_categories_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <FrameLayout
                android:id="@+id/category_rv_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_categories_title"
                tools:visibility="visible">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/categoryShimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:shimmer_auto_start="true"
                    tools:visibility="invisible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_category_placeholder" />
                        <include layout="@layout/item_category_placeholder" />
                        <include layout="@layout/item_category_placeholder" />
                        <include layout="@layout/item_category_placeholder" />

                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_category"
                    tools:visibility="visible" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/loading_overlay_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:visibility="gone" />

    <com.google.android.material.loadingindicator.LoadingIndicator
        android:id="@+id/progressBar_home"
        style="@style/Widget.Material3.LoadingIndicator.Contained"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Loading"
        android:elevation="11dp"
        android:visibility="gone"
        app:containerColor="@color/orange"
        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>